--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@
     margin: 0%;
     padding: 0;
     box-sizing: border-box;
+    
+}
+
+html{
+    scroll-behavior: smooth;
 }
 
 .clearfix::after{
@@ -12,32 +17,74 @@
 body{
     font-family: 'Rubik Mono One', sans-serif;
     font-size: 1rem;
-    text-align: center;
 }
 .container{
+    max-width: 1200px;
+    margin: 0 auto;
+}
+
+.full-screen{
     height: 100vh;
     position: relative;
-    background-color: red;
-
 }
 
-.red{
+.full-screen .content{
     position: absolute;
-    height: 50%;
     top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
-
-}
-img{
-    height: 50%;
-
+    transform: translate(-50% , -50%);
+    text-align: center;
 }
 
-.text-color {
-    width: 450px;
+.full-screen .content h2{
+    font-size: 3em;
+}
 
-} 
-.yellow{
-    color: #FFFF00;
+.big-red{
+    background-color: red;
+}
+
+.big-green{
+    background-color: green;
+}
+
+.big-yellow{
+    background-color: yellow;
+}
+
+.text-red{
+    color: red;
+}
+
+.text-green{
+    color: green;
+}
+
+.text-yellow{
+    color: yellow;
+}
+
+h2{
+    text-transform: capitalize;
+}
+
+#nav-menu{
+    position: fixed;
+    top: 40px;
+    right: 35px;
+    z-index: 1;
+}
+
+#nav-menu li{
+    display: inline-block;
+    list-style: none;
+   
+}
+
+#nav-menu li a{
+    text-decoration: none;
+    color: black;
+    background-color: white;
+    border-radius: 50%;
+    padding: 10px 15px;
 }
